--- a/lesson.v.02-part1/css/style.css
+++ b/lesson.v.02-part1/css/style.css
@@ -83,6 +83,17 @@ a:visited {
     /* display: none; */
 }
 
+スクロール時のフェードイン
+section {
+  opacity: 0;
+  transition: 1s;
+}
+  
+.fade-in {
+  opacity: 1;
+}
+
+
 .top {
     width: 80px;
     height: 80px;
@@ -138,7 +149,7 @@ a:visited {
 }
 
 .works {
-    display: none;
+    /* display: none; */
     max-width: 960px;
     margin: auto;
     display: flex;
@@ -167,7 +178,8 @@ footer {
 /* スマートフォン用のスタイルを指定する */
 
     .circle {
-        max-width: 300px;
+        /* max-width: 300px; */
+        max-width: 100%;
     }
 
     .item, .item-center {
