--- a/商品の横スクロール実装案件/styles.css
+++ b/商品の横スクロール実装案件/styles.css
@@ -1,16 +1,9 @@
 /* styles.css */
 body {
   background-color: #db011c;
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  overflow: hidden; */
 }
 
 .product-set {
-  /* width: 64%; */
   width: 100%;
   max-width: 887px;
   margin: auto;
@@ -39,31 +32,57 @@ body {
     padding: 10px;
     box-sizing: border-box;
     text-align: center;
+
+
+
+    height: 60px;
+  }
+  .lineup p {
+    margin: 0;
   }
 }
 
 .product {
-  min-width: 200px;
-  height: 200px;
-  margin: 10px;
-  background-color: #f0f0f0;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  width: 400px;
+  min-width: 200px;
+  height: 300px;
+  margin: 10px;
+  
+  
+
+
   border: 1px solid #ccc;
-  border-radius: 10px;
-  user-select: none;
+}
+
+.product-img {
+  width: 100%;
+  height: 100%;
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.product p {
+  margin: 0;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.product-number {
+  font-size: 12px;
+  font-weight: 100;
 }
 
 .product-container {
   display: flex;
   overflow-x: scroll;
   width: 100%;
-  /* visibility: hidden;
-  height: 0; */
+  visibility: hidden;
+  height: 0;
   cursor: grab;
-  /* opacity: 0; */
-  /* transform: translateY(100%); */
+  opacity: 0;
+  transform: translateY(5%);
 }
 
 
@@ -72,15 +91,31 @@ body {
   opacity: 1;
   transform: translateY(0);
   height: auto;
-  transition: opacity 1s ease-in-out, transform 1s ease-in-out, visibility 1s;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, visibility 0.5s;
 }
 
-/* .product-container {
-  display: flex;
-  visibility: hidden;
-  width: 300px;
-  height: 0;
-  background-color: rgb(103, 225, 247);
-  opacity: 0;
-  transform: translateY(100%);
-} */
+.lineup.active {
+  background-color: #ffffff;
+  color: #db011c;
+}
+
+
+@media screen and (max-width: 768px) {
+  .product {
+    min-width: auto;
+    flex: 0 0 40%;
+  }
+  .product-img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .product p {
+    font-size: 15px;
+    margin: 0;
+    color: #ffffff;
+    font-weight: bold;
+  }
+}
